# jelp

./: .gitmodules  .pre-commit-config.yaml  README.md  README_v0.md  llm-ctf-bench.sh  pyproject.toml
ctf/: README.md  adapters.py  cost_report.py  decision_report.py  harness.py  phase2_run.py  report.py  scenarios.py
ctf/fixtures/: common.py  fixture01_vault.py  fixture02_release.py  fixture03_cache.py  fixture04_bundle.py  fixture05_notes.py  fixture06_audit.py  fixture07_alias.py  fixture08_nested.py
ctf/results/: README.md  confirmatory-decision.md
ctf/results/phase1/: jelp-full-confirmatory-decision.md  jelp-useful-confirmatory-decision.md
docs/: jelp_spinout.md  jelp_v0-plan.md  llm-ctf-harness.md  opencli-decision-protocol.md  opencli-feedback-examples.md  phase-2-protocol.md  task-tracker-roadmap.md  task-tracker.md  v0-decisions.md
docs/phase1/: opencli-decision-protocol.md
src/jelp/: __init__.py  argparse.py  cli.py
tests/: conftest.py  test_cost_report.py  test_ctf_adapters.py  test_ctf_harness.py  test_decision_report.py  test_jelp.py  test_phase2_run.py
