[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jelp"
dynamic = ["version"]
description = "jelp: CLI introspection contract for LLM/tool use"
requires-python= ">=3.14"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Scott VR", email = "scottvr@gmail.com" }
]
dependencies = [
    'jsonschema>=4.0',
    'PyYAML'
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
[project.optional-dependencies]
default = [
]
developer = [
    'pre-commit>=3.2',
    'mypy',
    'isort',
    'ruff',
]
doc = [
]
examples = [
]
extra = [
    "jelp[examples]",
]
test = [
    'pytest>=7.2',
    'pytest-cov>=4.0',
    "jelp[examples]",
]
all = [
    "jelp[developer]",
    "jelp[test]",
    "jelp[extra]",
]

[project.scripts]
jelp = "jelp.cli:main"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=jelp --cov-report markdown"
filterwarnings = ["error"]

[project.urls]
Homepage = "https://github.com/scottvr/jelp"
Repository = "https://github.com/scottvr/jelp.git"
Issues = "https://github.com/scottvr/jelp/issues"

[tool.hatch.version]
path = "src/jelp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/jelp"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]

ignore = ["F401", "B010", "B904", "B009"]
#ignore = ["E501"]
unfixable = ["B"]


# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]
